--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Private configuration
+.github/copilot-instructions.md
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
